--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
